syntax = "proto3";
import "google/protobuf/empty.proto";
package main;

option go_package = ".";

service EmployeeApi {
    rpc SayHello(HelloRequest) returns (HelloResponse) {}
    rpc GetAllEmployees(google.protobuf.Empty) returns (EmployeesResponse) {}
    rpc GetEmployee(google.protobuf.Empty) returns (Employee) {}
}


message HelloRequest {
    string msg = 1;
}

message  HelloResponse {
    string msg = 1;
}


message Employee {
    string firstName = 1;
    string lastName = 2;
    int64 age = 3;
    string email = 4;
    string department = 5;
}

message EmployeesResponse {
    repeated Employee data = 1;
}

